--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
   <meta name="author" content="TemplateMo">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     rel="stylesheet">
-
-  <title>Garagem Oficina HTML5 Template</title>
-
+  <title>Garagem Oficina</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
   <link rel="stylesheet" href="assets/css/owl.css">
-
+  <link rel="icon" type="image/png" href="assets/images/index/favicon.png">
 </head>
 
 <body>
@@ -54,13 +51,12 @@
       </div>
     </div>
   </div>
-
+  <!-- Menu-Nav -->
   <header class="">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img class="" src="./assets/images/Nova pasta/logo.png" alt="Logo da Garagem Oficina"
-            style="width: 80px; height: 80px; position: relative; top: -26px;">
+          <h2>Garagem Oficina</h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +85,6 @@
         </div>
       </div>
     </nav>
-
   </header>
 
   <!-- Page Content -->
@@ -425,52 +420,45 @@
   <!-- Footer Starts Here -->
   <footer style="margin-top: 10px;">
     <div class="container">
-      <div class="row">
-        <!-- Seção 1 -->
-        <div class="col-md-4 footer-item">
-          <h3>Garagem Oficina</h3>
-          <p><strong>Horário de Funcionamento:</strong></p>
-          <ul>
-            <li>Segunda a Sexta: 8h - 18h</li>
-            <li>Sábado: 9h - 14h</li>
-            <li>Domingo: Fechado</li>
-          </ul>
-          <ul class="social-icons">
-            <li><a rel="nofollow" href="/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-          </ul>
-        </div>
+        <div class="row text-center text-md-left">
+            <!-- Seção 1 -->
+            <div class="col-md-4 footer-item">
+                <img src="assets/images/index/logo.png" alt="Logo da Empresa" width="170" height="170">
+                <ul class="social-icons">
+                    <li><a rel="nofollow" href="/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                </ul>
+            </div>
 
-        <!-- Seção 2 -->
-        <div class="col-md-4 footer-item">
-          <h4>Links Úteis</h4>
-          <ul class="menu-list">
-            <li><a href="#">Vivamus ut tellus mi</a></li>
-            <li><a href="#">Nulla nec cursus elit</a></li>
-            <li><a href="#">Vulputate sed nec</a></li>
-            <li><a href="#">Cursus augue hasellus</a></li>
-            <li><a href="#">Lacinia ac sapien</a></li>
-          </ul>
-        </div>
+            <!-- Seção 2 -->
+            <div class="col-md-4 footer-item">
+                <h4>Links Úteis</h4>
+                <ul class="menu-list">
+                    <li><a href="#">Vivamus ut tellus mi</a></li>
+                    <li><a href="#">Nulla nec cursus elit</a></li>
+                    <li><a href="#">Vulputate sed nec</a></li>
+                    <li><a href="#">Cursus augue hasellus</a></li>
+                    <li><a href="#">Lacinia ac sapien</a></li>
+                </ul>
+            </div>
 
-        <!-- Seção 3 -->
-
-        
-        <div class="col-md-4 footer-item">
-          <h4>Páginas Adicionais</h4>
-          <ul class="menu-list">
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Como Trabalhamos</a></li>
-            <li><a href="#">Suporte Rápido</a></li>
-            <li><a href="#">Entre em Contato</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
-          </ul>
+            <!-- Seção 3 -->
+            <div class="col-md-4 footer-item">
+                <h4>Páginas Adicionais</h4>
+                <ul class="menu-list">
+                    <li><a href="#">Sobre Nós</a></li>
+                    <li><a href="#">Como Trabalhamos</a></li>
+                    <li><a href="#">Suporte Rápido</a></li>
+                    <li><a href="#">Entre em Contato</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
+</footer>
+
 
 
 
