--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
               <a class="nav-link" href="about.html">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Nossos Serviços</a>
+              <a class="nav-link" href="servicos.html">Nossos Serviços</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contato</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="one-page.html">Galeria</a>
+              <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
           </ul>
         </div>
@@ -111,7 +111,7 @@
             <h4>Serviços de<br>&amp; Manutenção Automotiva</h4>
             <p>Conheça nossos serviços especializados e aproveite as promoções exclusivas para manutenção e reparos.
               Garagem Oficina oferece qualidade e confiança para seu veículo.</p>
-            <a href="services.html" class="filled-button">nossos serviços</a>
+            <a href="servicos.html" class="filled-button">nossos serviços</a>
           </div>
 
         </div>
