--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
     <!-- ***** Preloader End ***** -->
-
     <!-- Header -->
     <div class="sub-header">
       <div class="container">
@@ -49,10 +48,13 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
               <li>
-                <a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a>
+                <a href="#"><i class="fa fa-phone"></i>(11) 99703-2814</a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-phone"></i>090-080-0760</a>
+                <a href="#"
+                  ><i class="fa fa-map-marker"></i>Rua Fonseca Galvão n° 55 -
+                  Vila Mariana - SP</a
+                >
               </li>
             </ul>
           </div>
@@ -62,20 +64,16 @@ https://templatemo.com/tm-545-finance-business
                 <a href="#"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="#"><i class="fa fa-whatsapp"></i></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Menu-Nav -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
@@ -106,13 +104,13 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="about.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Nossos Serviços</a>
+                <a class="nav-link" href="servicos.html">Nossos Serviços</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">Galeria</a>
+                <a class="nav-link" href="galeria.html">Galeria</a>
               </li>
             </ul>
           </div>
@@ -125,13 +123,14 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>About Us</h1>
-            <span>We have over 20 years of experience</span>
+            <h1>Sobre nós</h1>
+            <span>COM MAIS DE 20 ANOS DE ESPERIÊNCIA </span>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- More Info Section -->
     <div class="more-info about-info">
       <div class="container">
         <div class="row">
@@ -140,22 +139,31 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>our solid background on finance</span>
-                    <h2>Get to know about <em>our company</em></h2>
+                    <span>Nosso Compromisso com Excelência Automotiva</span>
+                    <h2>
+                      Conheça nossa mecânica, garantimos
+                      <em>confiança e qualidade em nossos serviços.</em>
+                    </h2>
                     <p>
-                      Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut
-                      id tempor turpis, ac dignissim ipsum. Nulla ullamcorper,
-                      ipsum vel condimentum congue, mi odio vehicula tellus, sit
-                      amet malesuada justo sem. <br /><br />Pellentesque in
-                      sagittis lacus, vel auctor sem. Quisque eu quam eleifend,
-                      ullamcorper dui nec, luctus quam.
+                      Na <strong>[Nome da Mecânica]</strong>, redefinimos o
+                      conceito de eficiência e confiança no setor automotivo.
+                      Nossa equipe combina expertise técnica com atendimento
+                      ágil e personalizado, garantindo que cada cliente receba
+                      exatamente o que precisa para manter seu veículo em
+                      perfeito estado. <br /><br />
+                      Apesar do espaço compacto, entregamos grandes resultados
+                      com soluções rápidas e eficazes. Afinal, sua satisfação é
+                      o nosso maior combustível.
                     </p>
-                    <a href="" class="filled-button">Read More</a>
+                    <a href="#services" class="filled-button">Saiba Mais</a>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="left-image">
-                    <img src="assets/images/about-image.jpg" alt="" />
+                    <img
+                      src="assets/images/sobre/about-image.jpg"
+                      alt="Nossa Mecânica"
+                    />
                   </div>
                 </div>
               </div>
@@ -165,50 +173,35 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="team">
+    <!-- Team Section -->
+    <div class="team d-flex justify-content-center align-items-center">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
+        <div class="row justify-content-center">
+          <div class="col-md-12 text-center">
             <div class="section-heading">
-              <h2>Our team <em>members</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <h2>Conheça <em>o profissional</em></h2>
+              <span>
+                Mario Fanucchi, o mecânico dedicado que cuida do seu veículo
+                como se fosse o dele.
+              </span>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team_01.jpg" alt="" />
+          <div class="col-md-4 d-flex flex-column align-items-center">
+            <div class="team-item text-center">
+              <img
+                src="assets/images/team_01.jpg"
+                alt="Mario Fanucchi"
+                class="img-fluid"
+              />
               <div class="down-content">
-                <h4>William Smith</h4>
-                <span>Co-Founder</span>
+                <h4>Mario Fanucchi</h4>
+                <span>Proprietário e Mecânico Especialista</span>
                 <p>
-                  In sem sem, dapibus non lacus auctor, ornare sollicitudin
-                  lacus. Aliquam ipsum urna, semper quis.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team_02.jpg" alt="" />
-              <div class="down-content">
-                <h4>Mary Houston</h4>
-                <span>Chief Marketing Officer</span>
-                <p>
-                  In sem sem, dapibus non lacus auctor, ornare sollicitudin
-                  lacus. Aliquam ipsum urna, semper quis.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team_03.jpg" alt="" />
-              <div class="down-content">
-                <h4>Paul Walker</h4>
-                <span>Financial Analyst</span>
-                <p>
-                  In sem sem, dapibus non lacus auctor, ornare sollicitudin
-                  lacus. Aliquam ipsum urna, semper quis.
+                  Com anos de experiência e paixão pela mecânica, Mario Fanucchi
+                  é o profissional que você pode confiar para cuidar do seu
+                  veículo. Ele combina conhecimento técnico, atenção aos
+                  detalhes e dedicação para oferecer serviços de alta qualidade
+                  e garantir sua satisfação.
                 </p>
               </div>
             </div>
@@ -217,48 +210,54 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
+    <!-- Fun Facts Section -->
     <div class="fun-facts">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
-              <h2>Our solutions for your <em>business growth</em></h2>
+              <span>Por que escolher Mario Fanucchi?</span>
+              <h2>
+                Dedicação e experiência para o <em>cuidado do seu veículo</em>
+              </h2>
               <p>
-                Pellentesque ultrices at turpis in vestibulum. Aenean pretium
-                elit nec congue elementum. Nulla luctus laoreet porta. Maecenas
-                at nisi tempus, porta metus vitae, faucibus augue.
-                <br /><br />Fusce et venenatis ex. Quisque varius, velit quis
-                dictum sagittis, odio velit molestie nunc, ut posuere ante
-                tortor ut neque.
+                Como único responsável pelos serviços, Mario Fanucchi combina
+                expertise técnica com atendimento personalizado, oferecendo
+                soluções rápidas e confiáveis. Seu compromisso é garantir a
+                segurança e a performance do seu carro, sempre com transparência
+                e atenção aos detalhes.
+                <br /><br />
+                Cada cliente é tratado de forma única, e cada serviço é
+                executado com o mais alto padrão de qualidade para sua total
+                satisfação.
               </p>
-              <a href="" class="filled-button">Read More</a>
+              <a href="#services" class="filled-button">Saiba Mais</a>
             </div>
           </div>
           <div class="col-md-6 align-self-center">
             <div class="row">
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">945</div>
-                  <div class="count-title">Work Hours</div>
+                  <div class="count-digit">12420</div>
+                  <div class="count-title">Horas Trabalhadas</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">1280</div>
-                  <div class="count-title">Great Reviews</div>
+                  <div class="count-digit">450</div>
+                  <div class="count-title">Avaliações Positivas</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">578</div>
-                  <div class="count-title">Projects Done</div>
+                  <div class="count-digit">840</div>
+                  <div class="count-title">Veículos Atendidos</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">26</div>
-                  <div class="count-title">Awards Won</div>
+                  <div class="count-digit">20</div>
+                  <div class="count-title">Anos de Experiência</div>
                 </div>
               </div>
             </div>
@@ -272,63 +271,92 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>What they say <em>about us</em></h2>
-              <span>testimonials from our greatest clients</span>
+              <h2>O que dizem <em>sobre nós</em></h2>
+              <span>Depoimentos de nossos clientes satisfeitos</span>
             </div>
           </div>
           <div class="col-md-12">
             <div class="owl-testimonials owl-carousel">
               <div class="testimonial-item">
                 <div class="inner-content">
-                  <h4>George Walker</h4>
-                  <span>Chief Financial Analyst</span>
+                  <h4>João Oliveira</h4>
+                  <span>Cliente Fidelizado</span>
                   <p>
-                    "Nulla ullamcorper, ipsum vel condimentum congue, mi odio
-                    vehicula tellus, sit amet malesuada justo sem sit amet quam.
-                    Pellentesque in sagittis lacus."
+                    "Sempre que preciso de manutenção no meu carro, confio no
+                    trabalho do Mario. Ele resolve tudo com rapidez e oferece um
+                    atendimento excepcional. Recomendo de olhos fechados!"
                   </p>
+                  <div
+                    class="testimonial-icon rounded-circle d-flex justify-content-center align-items-center"
+                  >
+                    <span>J</span>
+                  </div>
                 </div>
-                <img src="http://placehold.it/60x60" alt="" />
               </div>
 
               <div class="testimonial-item">
                 <div class="inner-content">
-                  <h4>John Smith</h4>
-                  <span>Market Specialist</span>
+                  <h4>Maria Fernanda</h4>
+                  <span>Empresária</span>
                   <p>
-                    "In eget leo ante. Sed nibh leo, laoreet accumsan euismod
-                    quis, scelerisque a nunc. Mauris accumsan, arcu id ornare
-                    malesuada, est nulla luctus nisi."
+                    "O Mario é extremamente profissional e transparente. Desde o
+                    diagnóstico até o conserto, senti muita segurança no
+                    serviço. Meu carro nunca esteve tão bem cuidado!"
                   </p>
+                  <div
+                    class="testimonial-icon rounded-circle d-flex justify-content-center align-items-center"
+                  >
+                    <span>M</span>
+                  </div>
                 </div>
-                <img src="http://placehold.it/60x60" alt="" />
               </div>
 
               <div class="testimonial-item">
                 <div class="inner-content">
-                  <h4>David Wood</h4>
-                  <span>Chief Accountant</span>
+                  <h4>Roberto Santos</h4>
+                  <span>Motorista de Aplicativo</span>
                   <p>
-                    "Ut ultricies maximus turpis, in sollicitudin ligula posuere
-                    vel. Donec finibus maximus neque, vitae egestas quam
-                    imperdiet nec. Proin nec mauris eu tortor consectetur
-                    tristique."
+                    "Trabalho com meu carro todos os dias e não posso perder
+                    tempo. Sempre sou atendido com rapidez e o serviço é
+                    impecável. Perfeito para quem depende do veículo."
                   </p>
+                  <div
+                    class="testimonial-icon rounded-circle d-flex justify-content-center align-items-center"
+                    style="
+                      margin-top: 20px;
+                      width: 60px;
+                      height: 60px;
+                      background-color: #f1c40f;
+                      color: #fff;
+                      font-size: 35px;
+                      font-weight: bold;
+                      border: 2px solid #e67e22;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      text-align: center;
+                    "
+                  >
+                    <span>R</span>
+                  </div>
                 </div>
-                <img src="http://placehold.it/60x60" alt="" />
               </div>
 
               <div class="testimonial-item">
                 <div class="inner-content">
-                  <h4>Andrew Boom</h4>
-                  <span>Marketing Head</span>
+                  <h4>Ana Luísa</h4>
+                  <span>Cliente Satisfeita</span>
                   <p>
-                    "Curabitur sollicitudin, tortor at suscipit volutpat, nisi
-                    arcu aliquet dui, vitae semper sem turpis quis libero.
-                    Quisque vulputate lacinia nisl ac lobortis."
+                    "O atendimento foi excepcional, e o preço é justo para a
+                    qualidade que oferecem. Além disso, explicaram tudo que meu
+                    carro precisava, sem surpresas na hora do pagamento."
                   </p>
+                  <div
+                    class="testimonial-icon rounded-circle d-flex justify-content-center align-items-center"
+                  >
+                    <span>A</span>
+                  </div>
                 </div>
-                <img src="http://placehold.it/60x60" alt="" />
               </div>
             </div>
           </div>
