--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,13 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
               <li>
-                <a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a>
+                <a href="#"><i class="fa fa-phone"></i>(11) 99703-2814</a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-phone"></i>090-080-0760</a>
+                <a href="#"
+                  ><i class="fa fa-map-marker"></i>Rua Fonseca Galvão n° 55 -
+                  Vila Mariana - SP</a
+                >
               </li>
             </ul>
           </div>
@@ -62,20 +65,16 @@ https://templatemo.com/tm-545-finance-business
                 <a href="#"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="#"><i class="fa fa-whatsapp"></i></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Menu-Nav -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
@@ -106,13 +105,13 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="about.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Nossos Serviços</a>
+                <a class="nav-link" href="servicos.html">Nossos Serviços</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">Galeria</a>
+                <a class="nav-link" href="galeria.html">Galeria</a>
               </li>
             </ul>
           </div>
