--- a/contact.html
+++ b/contact.html
@@ -108,10 +108,10 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="servicos.html">Nossos Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contato</a>
+                <a class="nav-link" href="galeria.html">Galeria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="galeria.html">Galeria</a>
+                <a class="nav-link" href="contact.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -257,7 +257,7 @@ https://templatemo.com/tm-545-finance-business
 	4. Copy only URL and paste it within the src="" field below
 -->
       <iframe
-        src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.6770125080498!2d-46.62362282542125!3d-23.580040962277316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5962e9d22e95%3A0x5730ab03f301ac54!2sR.%20Fonseca%20Galv%C3%A3o%2C%2055%20-%20Jardim%20da%20Gloria%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001547-130!5e0!3m2!1spt-BR!2sbr!4v1734665977792!5m2!1spt-BR!2sbr" 
         width="100%"
         height="500px"
         frameborder="0"
@@ -266,13 +266,26 @@ https://templatemo.com/tm-545-finance-business
       ></iframe>
     </div>
 
-    <div class="partners contact-partners">
+    <div class="partners">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="owl-partners owl-carousel">
+            <!-- Carousel de Parceiros -->
+            <div class="owl-carousel owl-partners">
               <div class="partner-item">
-                <img src="assets/images/client-01.png" alt="" />
+                <img src="assets/images/parceiros/logo-ford.png" alt="Logo da Ford" title="Ford">
+              </div>
+              <div class="partner-item">
+                <img src="assets/images/parceiros/toyota-logo.png" alt="Logo da Toyota" title="Toyota">
+              </div>
+              <div class="partner-item">
+                <img src="assets/images/parceiros/chevrolet-logo.png" alt="Logo da Chevrolet" title="Chevrolet">
+              </div>
+              <div class="partner-item">
+                <img src="assets/images/parceiros/mercedes-logo.png" alt="Logo da Mercedes" title="Mercedes">
+              </div>
+              <div class="partner-item">
+                <img src="assets/images/parceiros/honda-logo.png" alt="Logo da Honda" title="Honda">
               </div>
             </div>
           </div>
@@ -280,80 +293,83 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <!-- Footer Starts Here -->
-    <footer style="margin-top: 10px">
-      <div class="container">
-        <div class="row text-center text-md-left">
-          <!-- Seção 1 -->
-          <div class="col-md-4 footer-item">
-            <img
-              src="assets/images/index/logo.png"
-              alt="Logo da Empresa"
-              width="170"
-              height="170"
-            />
-            <ul class="social-icons">
-              <li>
-                <a rel="nofollow" href="/" target="_blank"
-                  ><i class="fa fa-facebook"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Seção 2 -->
-          <div class="col-md-4 footer-item">
-            <h4>Links Úteis</h4>
-            <ul class="menu-list">
-              <li><a href="#">Vivamus ut tellus mi</a></li>
-              <li><a href="#">Nulla nec cursus elit</a></li>
-              <li><a href="#">Vulputate sed nec</a></li>
-              <li><a href="#">Cursus augue hasellus</a></li>
-              <li><a href="#">Lacinia ac sapien</a></li>
-            </ul>
-          </div>
-
-          <!-- Seção 3 -->
-          <div class="col-md-4 footer-item">
-            <h4>Páginas Adicionais</h4>
-            <ul class="menu-list">
-              <li><a href="#">Sobre Nós</a></li>
-              <li><a href="#">Como Trabalhamos</a></li>
-              <li><a href="#">Suporte Rápido</a></li>
-              <li><a href="#">Entre em Contato</a></li>
-              <li><a href="#">Política de Privacidade</a></li>
-            </ul>
-          </div>
+  <!-- Footer Starts Here -->
+  <footer style="margin-top: 10px;">
+    <div class="container">
+      <div class="row text-center text-md-left">
+        <!-- Seção 1 -->
+        <div class="col-md-4 footer-item">
+          <img src="assets/images/index/logo.png" alt="Logo da Empresa" width="170" height="170">
+          <ul class="social-icons">
+            <li><a href="/" target="_blank" rel="nofollow noopener"><i class="fa fa-facebook"
+                  aria-hidden="true"></i></a></li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-linkedin"
+                  aria-hidden="true"></i></a></li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-behance" aria-hidden="true"></i></a>
+            </li>
+          </ul>
         </div>
-      </div>
-    </footer>
+        <!-- Seção 2 -->
+        <div class="col-md-4 footer-item">
+          <h4>Páginas Adicionais</h4>
+          <ul class="menu-list">
+            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="contact.html">Entre em Contato</a></li>
+          </ul>
+        </div>
+        <!-- Seção 3 -->
+        <div class="col-md-4 footer-item">
+          <h4>Informações de Contato</h4>
+          <table class="table" style="color: #fff; border-collapse: collapse;">
+            <thead>
+              <tr>
+                <th
+                  style="border-bottom: 2px solid #4ac008; padding: 10px 0; text-align: left; font-weight: bold; font-size: 16px;">
+                  Detalhes</th>
+                <th
+                  style="border-bottom: 2px solid #4ac008; padding: 10px 0; text-align: left; font-weight: bold; font-size: 16px;">
+                  Informações</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="padding: 8px 0;">Horário de Funcionamento</td>
+                <td style="padding: 8px 0;">08:00 - 17:00</td>
+              </tr>
+              <tr>
+                <td style="padding: 8px 0;">Telefone</td>
+                <td style="padding: 8px 0;"><a href="tel:+55119451-0976"
+                    style="color: #fff; text-decoration: none; font-weight: bold;">(11) 9 5451-0976</a></td>
+              </tr>
+              <tr>
+                <td style="padding: 8px 0;">Email</td>
+                <td style="padding: 8px 0;"><a href="mailto:contato@empresa.com"
+                    style="color: #fff; text-decoration: none; font-weight: bold;">mario.fanucchi@hotmail.com</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-    <div class="sub-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p>
-              Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
-              <a
-                rel="nofollow noopener"
-                href="https://templatemo.com"
-                target="_blank"
-                >TemplateMo</a
-              >
-            </p>
-          </div>
+
+      </div>
+    </div>
+  </footer>
+  <!-- Sub-footer -->
+  <div class="sub-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>Copyright &copy; 2020 Garagem Oficina Ltda. - Criado por:
+            <a href="/" target="_blank" rel="nofollow noopener">Aceleração Web</a>
+          </p>
         </div>
       </div>
     </div>
+  </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -377,5 +393,9 @@ https://templatemo.com/tm-545-finance-business
         }
       }
     </script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?l=pt&phone=5511997032814" style="position:fixed;width:60px;height:60px;bottom:40px;right:35px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+  z-index:1000;" target="_blank">
+      <i style="margin-top:16px" class="fa fa-whatsapp"></i>
   </body>
 </html>
