--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="TemplateMo">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+    rel="stylesheet">
   <title>Garagem Oficina</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,10 +74,10 @@
               <a class="nav-link" href="servicos.html">Nossos Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contato</a>
+              <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Galeria</a>
+              <a class="nav-link" href="contact.html">Contato</a>
             </li>
           </ul>
         </div>
@@ -165,8 +166,9 @@
             <img src="assets/images/service_01.jpg" class="card-img-top img-fluid" alt="Troca de Óleo">
             <div class="card-body text-center">
               <h4 class="card-title">Troca de Óleo</h4>
-              <p class="card-text">Nossos especialistas realizam a troca de óleo de forma rápida e eficiente, utilizando produtos de alta qualidade.</p>
-              <a href="#" class="btn btn-primary btn-sm">Saiba Mais</a>
+              <p class="card-text">Nossos especialistas realizam a troca de óleo de forma rápida e eficiente, utilizando
+                produtos de alta qualidade.</p>
+              <a href="./servicos.html" class="btn btn-primary btn-sm">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -176,8 +178,9 @@
             <img src="assets/images/service_02.jpg" class="card-img-top img-fluid" alt="Revisão Completa">
             <div class="card-body text-center">
               <h4 class="card-title">Revisão Completa</h4>
-              <p class="card-text">Realizamos revisões completas para garantir que seu veículo esteja sempre em perfeitas condições.</p>
-              <a href="#" class="btn btn-primary btn-sm">Saiba Mais</a>
+              <p class="card-text">Realizamos revisões completas para garantir que seu veículo esteja sempre em
+                perfeitas condições.</p>
+              <a href="/servicos.html" class="btn btn-primary btn-sm">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -187,15 +190,16 @@
             <img src="assets/images/service_03.jpg" class="card-img-top img-fluid" alt="Diagnóstico Eletrônico">
             <div class="card-body text-center">
               <h4 class="card-title">Diagnóstico Eletrônico</h4>
-              <p class="card-text">Utilizamos equipamentos modernos para realizar diagnósticos precisos e rápidos em seu veículo.</p>
-              <a href="#" class="btn btn-primary btn-sm">Saiba Mais</a>
+              <p class="card-text">Utilizamos equipamentos modernos para realizar diagnósticos precisos e rápidos em seu
+                veículo.</p>
+              <a href="/servicos.html" class="btn btn-primary btn-sm">Saiba Mais</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+
 
   <div class="fun-facts">
     <div class="container">
@@ -274,7 +278,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="testimonials">
     <div class="container">
       <div class="row">
@@ -301,7 +305,7 @@
       </div>
     </div>
   </div>
-  
+
 
   <!-- <div class="callback-form">
     <div class="container">
@@ -377,12 +381,12 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Scripts necessários para Owl Carousel -->
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
   <script src="assets/js/owl.carousel.min.js"></script>
-  
+
   <script>
     // Inicializa o Owl Carousel
     $(document).ready(function () {
@@ -398,87 +402,113 @@
       });
     });
   </script>
-  
 
-<!-- Footer Starts Here -->
-<footer style="margin-top: 10px;">
-  <div class="container">
-    <div class="row text-center text-md-left">
-      <!-- Seção 1 -->
-      <div class="col-md-4 footer-item">
-        <img src="assets/images/index/logo.png" alt="Logo da Empresa" width="170" height="170">
-        <ul class="social-icons">
-          <li><a href="/" target="_blank" rel="nofollow noopener"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-          <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-        </ul>
+  <!-- Footer Starts Here -->
+  <footer style="margin-top: 10px;">
+    <div class="container">
+      <div class="row text-center text-md-left">
+        <!-- Seção 1 -->
+        <div class="col-md-4 footer-item">
+          <img src="assets/images/index/logo.png" alt="Logo da Empresa" width="170" height="170">
+          <ul class="social-icons">
+            <li><a href="/" target="_blank" rel="nofollow noopener"><i class="fa fa-facebook"
+                  aria-hidden="true"></i></a></li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-linkedin"
+                  aria-hidden="true"></i></a></li>
+            <li><a href="#" target="_blank" rel="nofollow noopener"><i class="fa fa-behance" aria-hidden="true"></i></a>
+            </li>
+          </ul>
+        </div>
+        <!-- Seção 2 -->
+        <div class="col-md-4 footer-item">
+          <h4>Páginas Adicionais</h4>
+          <ul class="menu-list">
+            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="contact.html">Entre em Contato</a></li>
+          </ul>
+        </div>
+        <!-- Seção 3 -->
+        <div class="col-md-4 footer-item">
+          <h4>Informações de Contato</h4>
+          <table class="table" style="color: #fff; border-collapse: collapse;">
+            <thead>
+              <tr>
+                <th
+                  style="border-bottom: 2px solid #4ac008; padding: 10px 0; text-align: left; font-weight: bold; font-size: 16px;">
+                  Detalhes</th>
+                <th
+                  style="border-bottom: 2px solid #4ac008; padding: 10px 0; text-align: left; font-weight: bold; font-size: 16px;">
+                  Informações</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="padding: 8px 0;">Horário de Funcionamento</td>
+                <td style="padding: 8px 0;">08:00 - 17:00</td>
+              </tr>
+              <tr>
+                <td style="padding: 8px 0;">Telefone</td>
+                <td style="padding: 8px 0;"><a href="tel:+55119451-0976"
+                    style="color: #fff; text-decoration: none; font-weight: bold;">(11) 9 5451-0976</a></td>
+              </tr>
+              <tr>
+                <td style="padding: 8px 0;">Email</td>
+                <td style="padding: 8px 0;"><a href="mailto:contato@empresa.com"
+                    style="color: #fff; text-decoration: none; font-weight: bold;">mario.fanucchi@hotmail.com</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+
       </div>
+    </div>
+  </footer>
 
-      <!-- Seção 2 -->
-      <div class="col-md-4 footer-item">
-        <h4>Links Úteis</h4>
-        <ul class="menu-list">
-          <li><a href="#">Vivamus ut tellus mi</a></li>
-          <li><a href="#">Nulla nec cursus elit</a></li>
-          <li><a href="#">Vulputate sed nec</a></li>
-          <li><a href="#">Cursus augue hasellus</a></li>
-          <li><a href="#">Lacinia ac sapien</a></li>
-        </ul>
-      </div>
-
-      <!-- Seção 3 -->
-      <div class="col-md-4 footer-item">
-        <h4>Páginas Adicionais</h4>
-        <ul class="menu-list">
-          <li><a href="#">Sobre Nós</a></li>
-          <li><a href="#">Como Trabalhamos</a></li>
-          <li><a href="#">Suporte Rápido</a></li>
-          <li><a href="#">Entre em Contato</a></li>
-          <li><a href="#">Política de Privacidade</a></li>
-        </ul>
+  <!-- Sub-footer -->
+  <div class="sub-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>Copyright &copy; 2020 Garagem Oficina Ltda. - Criado por:
+            <a href="/" target="_blank" rel="nofollow noopener">Aceleração Web</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</footer>
 
-<!-- Sub-footer -->
-<div class="sub-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <p>Copyright &copy; 2020 Garagem Oficina Ltda. - Criado por: 
-          <a href="/" target="_blank" rel="nofollow noopener">Aceleração Web</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Additional Scripts -->
+  <script src="assets/js/custom.js"></script>
+  <script src="assets/js/owl.js"></script>
+  <script src="assets/js/slick.js"></script>
+  <script src="assets/js/accordions.js"></script>
 
-<!-- Additional Scripts -->
-<script src="assets/js/custom.js"></script>
-<script src="assets/js/owl.js"></script>
-<script src="assets/js/slick.js"></script>
-<script src="assets/js/accordions.js"></script>
+  <!-- <script>
+    // Variável global para armazenar o estado de campos
+    const cleared = [0, 0, 0];
 
-<script>
-  // Variável global para armazenar o estado de campos
-  const cleared = [0, 0, 0]; 
-
-  // Função para limpar campo ao clicar
-  function clearField(t) {
-    if (!cleared[t.id]) {
-      cleared[t.id] = 1;  // Marca como limpo
-      t.value = '';       // Limpa o valor
-      t.style.color = '#fff'; // Altera a cor
+    // Função para limpar campo ao clicar
+    function clearField(t) {
+      if (!cleared[t.id]) {
+        cleared[t.id] = 1;  // Marca como limpo
+        t.value = '';       // Limpa o valor
+        t.style.color = '#fff'; // Altera a cor
+      }
     }
-  }
-</script>
-
+  </script> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send?l=pt&phone=5511997032814" style="position:fixed;width:60px;height:60px;bottom:40px;right:35px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+z-index:1000;" target="_blank">
+    <i style="margin-top:16px" class="fa fa-whatsapp"></i>
 
 </body>
 
